--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }],
       "dest": "dist/main.js",
       "methods": ["GET", "POST", "PUT", "DELETE"]
     }
